; ModuleID = '/home/carl/AnghaBench/freebsd/sys/contrib/ngatm/netnatm/api/extr_cc_conn.c_cc_conn_reset_acceptor.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/contrib/ngatm/netnatm/api/extr_cc_conn.c_cc_conn_reset_acceptor.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ccconn = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @cc_conn_reset_acceptor(%struct.ccconn* %0) #0 {
  %2 = alloca %struct.ccconn*, align 8
  store %struct.ccconn* %0, %struct.ccconn** %2, align 8
  %3 = load %struct.ccconn*, %struct.ccconn** %2, align 8
  %4 = getelementptr inbounds %struct.ccconn, %struct.ccconn* %3, i32 0, i32 0
  %5 = load %struct.TYPE_2__*, %struct.TYPE_2__** %4, align 8
  %6 = icmp ne %struct.TYPE_2__* %5, null
  br i1 %6, label %7, label %14

7:                                                ; preds = %1
  %8 = load %struct.ccconn*, %struct.ccconn** %2, align 8
  %9 = getelementptr inbounds %struct.ccconn, %struct.ccconn* %8, i32 0, i32 0
  %10 = load %struct.TYPE_2__*, %struct.TYPE_2__** %9, align 8
  %11 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %10, i32 0, i32 0
  store i32* null, i32** %11, align 8
  %12 = load %struct.ccconn*, %struct.ccconn** %2, align 8
  %13 = getelementptr inbounds %struct.ccconn, %struct.ccconn* %12, i32 0, i32 0
  store %struct.TYPE_2__* null, %struct.TYPE_2__** %13, align 8
  br label %14

14:                                               ; preds = %7, %1
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
